updated contact page

--- a/templates/about.html
+++ b/templates/about.html
@@ -40,8 +40,14 @@
         <div class="col-md-4"></div>
     </div>
 
-    <p><br /><br /> I was born on June 19th, 1997 in  San Diego, California and am currently studying Physics at the University of California, Santa Barbara.
-        Outside of my scientific interests, I am an amateur graphic artist and play the piano and guitar (poorly).
+    <p><br /><br />
+        I was born on June 19th, 1997 in  San Diego, California and am currently studying Physics at the University of California, Santa Barbara.
+        Outside of my scientific interests, I am an amateur graphic artist and play the piano and guitar (poorly). While working for the Campagnari
+        High Energy Physics group at UCSB, I have gained a greater interest in and appreciation for coding. I am most comfortable in Python, but
+        I have a working knowledge of C++ and am familiar with several other coding languages including JavaScript, html, and bash. My work for
+        the Campagnari group is mainly computational. We use ROOT, a C++ framework designed by and for CERN physicists, to interpret data gathered
+        by the CMS detector at the LHC. As far as my other persuits, I have done some more serious graphic design for some small companies and
+        startups. Examples of all of my work can be found on this website.
     </p>
 </div>
 {% endblock %}
