--- a/templates/contact.html
+++ b/templates/contact.html
@@ -32,5 +32,44 @@
         <h1>Contact Form</h1>
     </div>
     <!--Put form that takes message and sends to gmail or some database here-->
+    <form action="/contact" method="post" role="form">
+        <div class="form-group row">
+            <div class="col-sm-4">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+            </div>
+            <div class="col-sm-6">
+                <label for="email">Email</label>
+                <input type="text" class="form-control" id="email" name="email" placeholder="Enter email">
+                <small id="emailHelp" class="form-text text-muted">Your email will not be shared with anyone, and will be sent directly to me.</small>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="text">Short Message</label>
+            <textarea class="form-control" id="text" name="text" rows="4"></textarea>
+        </div>
+        <div class="row">
+            <div class="col-sm-1">
+                <button type="submit" class="btn btn-success">Submit</button>
+            </div>
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                    {% if "Error" not in messages[-1] %}
+                        <div class="col-sm-11">
+                            <small id="success" class="form-text text-muted">Success! Thank you for visiting my website, {{ name }}. I will contact you as soon as possible.</s>
+                        </div>
+                    {% endif %}
+
+                    {% if "Error" in messages[-1] %}
+                        <div class="alert alert-warning">
+                            {{ messages[1] }}
+                        </div>
+                    {% endif %}
+                {% endif %}
+            {% endwith %}
+
+            
+    </form>
+
 </div>
 {% endblock %}
