--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,6 +15,12 @@
 
     <body>
         {% block body %}{% endblock %}
+        <div class="container">
+            <hr>
+            <footer>
+                <p>Last updated August 5, 2017</p>
+            </footer>
+        </div>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
 
