updated about me, gallery, and contacts pages

--- a/templates/about.html
+++ b/templates/about.html
@@ -24,22 +24,27 @@
     </div><!--/.nav-collapse -->
   </div>
 </nav>
+<p><br /></p>
+<p><br /></p>
 
 <div class="container">
-    <p><br /></p>
-    <p><br /></p>
     <div class="page-header">
         <h1>About Me</h1>
     </div>
-
-    <div class="row">
-        <div class="col-md-4"></div>
-        <div class="col-md-4">
-            <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">
+</div>
+<div class="jumbotron jumbotron-billboard">
+    <div class="profile_bg"></div>
+    <p><br /></p>
+    <div class="container">
+        <div class="row">
+            <div class="text-center">
+                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-thumbnail" alt="Generic placeholder thumbnail">
+            </div>
         </div>
-        <div class="col-md-4"></div>
     </div>
+</div>
 
+<div class="container">
     <p><br /><br />
         I was born on June 19th, 1997 in  San Diego, California and am currently studying Physics at the University of California, Santa Barbara.
         Outside of my scientific interests, I am an amateur graphic artist and play the piano and guitar (poorly). While working for the Campagnari
