--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -32,85 +32,44 @@
         <h1>Gallery</h1>
     </div>
 </div>
-
-<div class="container">
-    <div class="greybg">
+    <!-- Jumbotron -->
+    <div class="jumbotron jumbotron-billboard">
+        <div class="posters"></div>
         <p><br /></p>
+        <div class="container">
+            <h1>Posters, postcards, and other designs</h1>
+            <p>Welcome to my personal website, which I developed using Flask and the CDN Boostrap quickstart templates.
+                Here you will find my various digital work, from graphic design to interactive programs written by me!
+                If you wish to contact me, please fill out the contact form on the Contact page. To view the source code
+                for this website, please click the button below.</p>
+            <p><a class="btn btn-primary btn-lg" href="http://github.com/jkguiang/my_website" role="button">See More &raquo;</a></p>
+        </div>
+    </div> <!-- End jumbotron -->
+    <!-- Jumbotron -->
+    <div class="jumbotron jumbotron-billboard">
+        <div class="venice"></div>
         <p><br /></p>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="text-center">
-                    <img class="imgframe" src="static/img/Primal_Rage.png" width="300" height="500" alt="Generic placeholder thumbnail">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="text-center">
-                    <img class="imgframe" src="static/img/batman_poster.jpg" width="270" height="480" alt="Generic placeholder thumbnail">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="text-center">
-                    <img class="imgframe" src="static/img/boldy_go.jpg" width="300" height="400" alt="Generic placeholder thumbnail">
-                </div>
-            </div>
+        <div class="container">
+            <h1>Animations</h1>
+            <p>Welcome to my personal website, which I developed using Flask and the CDN Boostrap quickstart templates.
+                Here you will find my various digital work, from graphic design to interactive programs written by me!
+                If you wish to contact me, please fill out the contact form on the Contact page. To view the source code
+                for this website, please click the button below.</p>
+            <p><a class="btn btn-primary btn-lg" href="http://github.com/jkguiang/my_website" role="button">See More &raquo;</a></p>
         </div>
-
-        <div class="col-md-4">
-            <div class="text-center">
-                <span class="text-muted">July 2017</span>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="text-center">
-                <span class="text-muted">November 2016</span>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="text-center">
-                <span class="text-muted">December 2016</span>
-            </div>
-        </div>
-
+    </div> <!-- End jumbotron -->
+    <!-- Jumbotron -->
+    <div class="jumbotron jumbotron-billboard">
+        <div class="venice"></div>
         <p><br /></p>
-        <p><br /></p>
-
-        <div class="row">
-            <div class="col-md-4">
-                <div class="text-center">
-                    <img class="imgframe" src="static/img/attack_ofthe_trapezoids.jpg" width="324" height="498" alt="Generic placeholder thumbnail">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="text-center">
-                    <img class="imgframe" src="static/img/partitions.jpg" width="306" height="361" alt="Generic placeholder thumbnail">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="text-center">
-                    <img class="imgframe" src="static/img/sb_postcard.jpg" width="326" height="184" alt="Generic placeholder thumbnail">
-                </div>
-            </div>
+        <div class="container">
+            <h1>Photography</h1>
+            <p>Welcome to my personal website, which I developed using Flask and the CDN Boostrap quickstart templates.
+                Here you will find my various digital work, from graphic design to interactive programs written by me!
+                If you wish to contact me, please fill out the contact form on the Contact page. To view the source code
+                for this website, please click the button below.</p>
+            <p><a class="btn btn-primary btn-lg" href="http://github.com/jkguiang/my_website" role="button">See More &raquo;</a></p>
         </div>
+    </div> <!-- End jumbotron -->
 
-        <div class="col-md-4">
-            <div class="text-center">
-                <span class="text-muted">July 2017</span>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="text-center">
-                <span class="text-muted">November 2016</span>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="text-center">
-                <span class="text-muted">December 2016</span>
-            </div>
-        </div>
-        <p><br /></p>
-        <p><br /></p>
-    </div>
-
-
-</div>
 {% endblock %}
