--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
 
 <!-- Jumbotron -->
 <div class="jumbotron jumbotron-billboard">
-    <div class="img"></div>
+    <div class="venice"></div>
     <p><br /></p>
     <div class="container">
         <h1>Hello.</h1>
