--- a/static/main_style.css
+++ b/static/main_style.css
@@ -1,4 +1,5 @@
-.jumbotron-billboard .img {
+/* Home */
+.jumbotron-billboard .venice {
     margin-bottom: 0px;
     opacity: 0.2;
     color: #fff;
@@ -7,8 +8,8 @@
     height: 100%;
     background-size: cover;
     overflow: hidden;
-  
-  
+
+
   position:absolute;
   top:0;left:0;
   z-index:1;
@@ -23,15 +24,69 @@ html {
   position: relative;
   min-height: 100%;
 }
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+
+/* About Me */
+.jumbotron-billboard .profile_bg {
+    margin-bottom: 0px;
+    opacity: 0.2;
+    color: #fff;
+    background: #000 url("img/campus_pnt_sunset.jpg") center center;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    overflow: hidden;
+
+
+  position:absolute;
+  top:0;left:0;
+  z-index:1;
 }
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
+
+/* Gallery */
+.jumbotron-billboard .posters {
+    margin-bottom: 0px;
+    opacity: 0.2;
+    color: #fff;
+    background: #000 url("img/batman_poster.jpg") center center;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    overflow: hidden;
+
+
+  position:absolute;
+  top:0;left:0;
+  z-index:1;
+}
+
+.jumbotron-billboard .animations {
+    margin-bottom: 0px;
+    opacity: 0.2;
+    color: #fff;
+    background: #000 url("img/venice.jpg") center center;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    overflow: hidden;
+
+
+  position:absolute;
+  top:0;left:0;
+  z-index:1;
+}
+
+.jumbotron-billboard .photograpy {
+    margin-bottom: 0px;
+    opacity: 0.2;
+    color: #fff;
+    background: #000 url("img/venice.jpg") center center;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    overflow: hidden;
+
+
+  position:absolute;
+  top:0;left:0;
+  z-index:1;
 }
