programs now have their own individual info pages

--- a/templates/home.html
+++ b/templates/home.html
@@ -52,10 +52,9 @@
             <h3>AutoPlotter</h3>
             <p>
             AutoPlotter is a web interface for a C++ program that plots
-            CMS3 data using the ROOT framework. It can be found on the
-            Programs page.
+            real CMS3 data and Monte Carlo simulations.
             </p>
-            <p><a class="btn btn-primary" href="/programs" role="button">Learn More &raquo;</a></p>
+            <p><a class="btn btn-primary" href="/programs/autoplotter" role="button">Learn More &raquo;</a></p>
         </div>
     </div>
 </div> <!-- End featured content -->
