--- a/templates/programs.html
+++ b/templates/programs.html
@@ -35,23 +35,30 @@
     <div class="row">
         <div class="col-lg-4">
             <div class="text-center">
-                <h2>The Lost Bastille</h2>
+                <h2>Metis: Log Module</h2>
                 <p class="text-muted">Python<br /></p>
                 <img class="imgframe" src="static/img/partitions.jpg" height="250" width="250">
             </div>
             <p><br /></p>
-            <p>The Lost Bastille is an interactive, text-based adventure game. It was one of my first projects, but I have since modified it to include animated images on this website, and have updated much of the code with more advanced techniques.</p>
-            <p><a class="btn btn-primary" href="/programs/the_lost_bastille" role="button">Launch &raquo;</a></p>
+            <p>
+                Metis is responsible for taking data from the CMS
+                detector at the LHC and consolidating various specific
+                samples into smaller, usable .root files.
+            </p>
+            <p><a class="btn btn-primary" href="/programs/projectmetis" role="button">Learn More &raquo;</a></p>
         </div>
         <div class="col-lg-4">
             <div class="text-center">
                 <h2>AutoPlotter</h2>
-                <p class="text-muted">jQuery/html/C++<br /></p>
+                <p class="text-muted">C++/JavaScript/html<br /></p>
                 <img class="imgframe" src="static/img/partitions.jpg" height="250" width="250">
             </div>
             <p><br /></p>
-            <p>AutoPlotter is a jQuery-based interface for a program I made using C++ and ROOT that plots various information from CMS3 data.</p>
-            <p><a class="btn btn-primary" href="http://uaf-8.t2.ucsd.edu/~jguiang/AutoPlotter/plotter.html#" role="button">Launch &raquo;</a></p>
+            <p>
+                AutoPlotter is a jQuery-based interface for a program I made
+                using C++ and ROOT that plots various information from CMS3 data.
+            </p>
+            <p><a class="btn btn-primary" href="/programs/autoplotter" role="button">Learn More &raquo;</a></p>
         </div>
         <div class="col-lg-4">
             <div class="text-center">
@@ -61,7 +68,7 @@
             </div>
             <p><br /></p>
             <p>The Lost Bastille is an interactive, text-based adventure game. It was one of my first projects, but I have since modified it to include animated images on this website, and have updated much of the code with more advanced techniques.</p>
-            <p><a class="btn btn-primary" href="#" role="button">Launch &raquo;</a></p>
+            <p><a class="btn btn-primary" href="#" role="button">Learn More &raquo;</a></p>
         </div>
     </div>
 </div>
