updated about, programs

--- a/templates/about.html
+++ b/templates/about.html
@@ -24,14 +24,14 @@
     </div><!--/.nav-collapse -->
   </div>
 </nav>
-<p><br /></p>
+<!-- <p><br /></p>
 <p><br /></p>
 
 <div class="container">
     <div class="page-header">
         <h1>About Me</h1>
     </div>
-</div>
+</div> -->
 <div class="jumbotron jumbotron-billboard">
     <div class="profile_bg"></div>
     <p><br /></p>
