--- a/templates/programs.html
+++ b/templates/programs.html
@@ -37,7 +37,7 @@
             <div class="text-center">
                 <h2>Metis: Log Module</h2>
                 <p class="text-muted">Python<br /></p>
-                <img class="imgframe" src="static/img/partitions.jpg" height="250" width="250">
+                <img class="imgframe" src="static/img/metis_thumbnail.png" height="225" width="300">
             </div>
             <p><br /></p>
             <p>
@@ -51,7 +51,7 @@
             <div class="text-center">
                 <h2>AutoPlotter</h2>
                 <p class="text-muted">C++/JavaScript/html<br /></p>
-                <img class="imgframe" src="static/img/partitions.jpg" height="250" width="250">
+                <img class="imgframe" src="static/img/plotter_thumbnail.png" height="225" width="300">
             </div>
             <p><br /></p>
             <p>
@@ -61,14 +61,7 @@
             <p><a class="btn btn-primary" href="/programs/autoplotter" role="button">Learn More &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-            <div class="text-center">
-                <h2>The Lost Bastille</h2>
-                <p class="text-muted">Python<br /></p>
-                <img class="imgframe" src="static/img/partitions.jpg" height="250" width="250">
-            </div>
-            <p><br /></p>
-            <p>The Lost Bastille is an interactive, text-based adventure game. It was one of my first projects, but I have since modified it to include animated images on this website, and have updated much of the code with more advanced techniques.</p>
-            <p><a class="btn btn-primary" href="#" role="button">Learn More &raquo;</a></p>
+            
         </div>
     </div>
 </div>
