--- a/templates/projectmetis.html
+++ b/templates/projectmetis.html
@@ -41,7 +41,7 @@
             implementing a module that took metadata concerning this process and produced plots that allow the user to
             better understand how the program is performing.
         </p>
-        <p><a class="btn btn-primary btn-lg" href="http://uaf-8.t2.ucsd.edu/~jguiang/AutoPlotter/plotter.html" role="button">Launch &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="/programs/projectmetis/features" role="button">Features &raquo;</a></p>
     </div>
 </div> <!-- End jumbotron -->
 
