--- a/templates/autoplotter.html
+++ b/templates/autoplotter.html
@@ -31,7 +31,7 @@
 
 <!-- Jumbotron -->
 <div class="jumbotron jumbotron-billboard">
-    <div class="venice"></div>
+    <div class="program"></div>
     <p><br /></p>
     <div class="container">
         <h1>AutoPlotter</h1>
