--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -34,20 +34,20 @@
 </div>
     <!-- Jumbotron -->
     <div class="jumbotron jumbotron-billboard">
-        <div class="posters"></div>
+        <div class="designs"></div>
         <p><br /></p>
         <div class="container">
-            <h1>Posters, postcards, and other designs</h1>
+            <h1>Designs</h1>
             <p>Welcome to my personal website, which I developed using Flask and the CDN Boostrap quickstart templates.
                 Here you will find my various digital work, from graphic design to interactive programs written by me!
                 If you wish to contact me, please fill out the contact form on the Contact page. To view the source code
                 for this website, please click the button below.</p>
-            <p><a class="btn btn-primary btn-lg" href="http://github.com/jkguiang/my_website" role="button">See More &raquo;</a></p>
+            <p><a class="btn btn-primary btn-lg" href="/gallery/designs" role="button">See More &raquo;</a></p>
         </div>
     </div> <!-- End jumbotron -->
     <!-- Jumbotron -->
     <div class="jumbotron jumbotron-billboard">
-        <div class="venice"></div>
+        <div class="animations"></div>
         <p><br /></p>
         <div class="container">
             <h1>Animations</h1>
@@ -60,7 +60,7 @@
     </div> <!-- End jumbotron -->
     <!-- Jumbotron -->
     <div class="jumbotron jumbotron-billboard">
-        <div class="venice"></div>
+        <div class="photography"></div>
         <p><br /></p>
         <div class="container">
             <h1>Photography</h1>
@@ -68,7 +68,7 @@
                 Here you will find my various digital work, from graphic design to interactive programs written by me!
                 If you wish to contact me, please fill out the contact form on the Contact page. To view the source code
                 for this website, please click the button below.</p>
-            <p><a class="btn btn-primary btn-lg" href="http://github.com/jkguiang/my_website" role="button">See More &raquo;</a></p>
+            <p><a class="btn btn-primary btn-lg" href="/gallery/photography" role="button">See More &raquo;</a></p>
         </div>
     </div> <!-- End jumbotron -->
 
