animations not made, contact info needs to be routed somewhere, everything else done for v1 release

--- a/templates/about.html
+++ b/templates/about.html
@@ -31,6 +31,7 @@
     <div class="container">
         <div class="row">
             <div class="text-center">
+                <!-- Replace this with profile image -->
                 <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-thumbnail" alt="Generic placeholder thumbnail">
             </div>
         </div>
