--- a/templates/autoplotter.html
+++ b/templates/autoplotter.html
@@ -62,8 +62,8 @@
         <div class="col-lg-4">
             <h3>Plotter</h3>
             <p>
-            Rather than having to write all of the code to generate each plot,
-            I consolidated the plots I need into member functions of one,
+            Instead of having to write all of the code to generate each plot,
+            I consolidated the plots I need into member functions of one
             main "plotter" class.
             </p>
             <p><a class="btn btn-primary" href="https://github.com/jkguiang/AutoPlotter/blob/master/ooplt.C" role="button">Github &raquo;</a></p>
