--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,8 @@
     <p><br /></p>
     <div class="container">
         <h1>Hello.</h1>
-        <p>Welcome to my personal website, which I developed using Flask and the CDN Boostrap quickstart templates.
+        <p>
+            Welcome to my personal website, which I developed using Flask and Boostrap.
             Here you will find my various digital work, from graphic design to interactive programs written by me!
             If you wish to contact me, please fill out the contact form on the Contact page. To view the source code
             for this website, please click the button below.</p>
