final additions to v1 of site

--- a/templates/photography.html
+++ b/templates/photography.html
@@ -67,10 +67,10 @@
                         <p><br /></p>
                         <div class="text-center">
                             <img id="img1" src="{{ url_for('static', filename='img/'+pic+'.jpg') }}" width=522 height=294>
-                            <span class="text-muted">
+                            <!-- <span class="text-muted">
                                 <br /><br />
                                 July 2017
-                            </span>
+                            </span> -->
                         </div>
                     </div>
                 {% endfor %}
@@ -85,10 +85,10 @@
                         <p><br /></p>
                         <div class="text-center">
                             <img id="img1" src="{{ url_for('static', filename='img/'+pic+'.jpg') }}" width=522 height=294>
-                            <span class="text-muted">
+                            <!-- <span class="text-muted">
                                 <br /><br />
                                 July 2017
-                            </span>
+                            </span> -->
                         </div>
                     </div>
                 {% endfor %}
