--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -38,10 +38,12 @@
         <p><br /></p>
         <div class="container">
             <h1>Designs</h1>
-            <p>Welcome to my personal website, which I developed using Flask and the CDN Boostrap quickstart templates.
-                Here you will find my various digital work, from graphic design to interactive programs written by me!
-                If you wish to contact me, please fill out the contact form on the Contact page. To view the source code
-                for this website, please click the button below.</p>
+            <p>
+                I am by no means a serious graphic artist. Instead, I pursue design as one might try to learn how to 
+                paint or draw. Photoshop is a greate creative outlet for me and I am constantly trying to get better at 
+                it. I am hoping that this page can serve as a timeline for my very slow progress so that one day I may 
+                look back and se ehow far I've come.
+            </p>
             <p><a class="btn btn-primary btn-lg" href="/gallery/designs" role="button">See More &raquo;</a></p>
         </div>
     </div> <!-- End jumbotron -->
@@ -51,11 +53,13 @@
         <p><br /></p>
         <div class="container">
             <h1>Animations</h1>
-            <p>Welcome to my personal website, which I developed using Flask and the CDN Boostrap quickstart templates.
-                Here you will find my various digital work, from graphic design to interactive programs written by me!
-                If you wish to contact me, please fill out the contact form on the Contact page. To view the source code
-                for this website, please click the button below.</p>
-            <p><a class="btn btn-primary btn-lg" href="http://github.com/jkguiang/my_website" role="button">See More &raquo;</a></p>
+            <p>
+                I have made several animations for the Mira Mesa Optometry facebook page. They mainly serve to 
+                liven up various posts. Using Photoshop to animate is new to me and I am eager to do more, though 
+                it is a very time-consuming and exhausting process. Eventually, I plan to host them here, but 
+                for now this link will direct you to giphy.com where they currently reside.
+            </p>
+            <p><a class="btn btn-primary btn-lg" href="https://giphy.com/channel/jguiang" role="button">See More &raquo;</a></p>
         </div>
     </div> <!-- End jumbotron -->
     <!-- Jumbotron -->
@@ -64,10 +68,12 @@
         <p><br /></p>
         <div class="container">
             <h1>Photography</h1>
-            <p>Welcome to my personal website, which I developed using Flask and the CDN Boostrap quickstart templates.
-                Here you will find my various digital work, from graphic design to interactive programs written by me!
-                If you wish to contact me, please fill out the contact form on the Contact page. To view the source code
-                for this website, please click the button below.</p>
+            <p>
+                I have included here some pictures I took at various places that I have been lucky enough to visit, 
+                as well as several obligatory beach pictures that one must eventually take while living in Santa 
+                Barbara. I have used some of these throughout this website, and partly included this page to allay 
+                copyright suspicions.
+            </p>
             <p><a class="btn btn-primary btn-lg" href="/gallery/photography" role="button">See More &raquo;</a></p>
         </div>
     </div> <!-- End jumbotron -->
