--- a/templates/about.html
+++ b/templates/about.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="text-center">
                 <!-- Replace this with profile image -->
-                <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-thumbnail" alt="Generic placeholder thumbnail">
+                <img src={{ url_for('static', filename='img/profile_pic.png') }} width="200" height="200" class="img-thumbnail" alt="Generic placeholder thumbnail">
             </div>
         </div>
     </div>
