updated AutoPlotter link

--- a/templates/autoplotter.html
+++ b/templates/autoplotter.html
@@ -41,7 +41,7 @@
             by UCSD. All of the plot-related code is written in C++, with some Python and JavaScript responsible for
             the functionality of the web interface.
         </p>
-        <p><a class="btn btn-primary btn-lg" href="http://uaf-8.t2.ucsd.edu/~jguiang/AutoPlotter/plotter.html" role="button">Launch &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="http://uaf-8.t2.ucsd.edu/~jguiang/AutoPlotter" role="button">Launch &raquo;</a></p>
     </div>
 </div> <!-- End jumbotron -->
 
