updated navigation pane

--- a/templates/designs.html
+++ b/templates/designs.html
@@ -48,9 +48,8 @@
                 <div class="well">
                     <ul class="nav">
                         <li class="active"><a href="/gallery">Gallery</a></li>
-                        <!-- <li><a href="#img1">Primal Rage</a></li>
-                        <li><a href="#img2">Boldly Go</a></li>
-                        <li><a href="#img3">Santa Barbara Postcard</a></li> -->
+                        <li><a href="https://giphy.com/channel/jguiang">Animations</a><li>
+                        <li><a href="/gallery/photography">Photography</a></li>
                     </ul>
                 </div>
             </div>
