--- a/templates/photography.html
+++ b/templates/photography.html
@@ -48,9 +48,8 @@
                 <div class="well">
                     <ul class="nav">
                         <li class="active"><a href="/gallery">Gallery</a></li>
-                        <!-- <li><a href="#img1">Primal Rage</a></li>
-                        <li><a href="#img2">Boldly Go</a></li>
-                        <li><a href="#img3">Santa Barbara Postcard</a></li> -->
+                        <li><a href="/gallery/designs">Designs</a></li>
+                        <li><a href="https://giphy.com/channel/jguiang">Animations</a><li>
                     </ul>
                 </div>
             </div>
@@ -62,15 +61,16 @@
             <!-- Left Column -->
             <div class="col-lg-6">
                 <!-- Fill column -->
-                {% for pic in left_col %}
+                {% for pic_obj in left_col %}
                     <div class="container-fluid">
                         <p><br /></p>
                         <div class="text-center">
-                            <img id="img1" src="{{ url_for('static', filename='img/'+pic+'.jpg') }}" width=522 height=294>
-                            <!-- <span class="text-muted">
-                                <br /><br />
-                                July 2017
-                            </span> -->
+                            <img id="img1" src="{{ url_for('static', filename='img/'+pic_obj+'.jpg') }}" width=522 height=294>
+                        </div>
+                        <div class="text-center">
+                            <span class="text-muted">
+                                {{ left_col[pic_obj] }}
+                            </span>
                         </div>
                     </div>
                 {% endfor %}
@@ -80,15 +80,16 @@
             <!-- Right Column -->
             <div class="col-lg-6">
                 <!-- Fill column -->
-                {% for pic in right_col %}
+                {% for pic_obj in right_col %}
                     <div class="container-fluid">
                         <p><br /></p>
                         <div class="text-center">
-                            <img id="img1" src="{{ url_for('static', filename='img/'+pic+'.jpg') }}" width=522 height=294>
-                            <!-- <span class="text-muted">
-                                <br /><br />
-                                July 2017
-                            </span> -->
+                            <img id="img1" src="{{ url_for('static', filename='img/'+pic_obj+'.jpg') }}" width=522 height=294>
+                        </div>
+                        <div class="text-center">
+                            <span class="text-muted">
+                                {{ right_col[pic_obj] }}
+                            </span>
                         </div>
                     </div>
                 {% endfor %}
