added new featuers

--- a/templates/home.html
+++ b/templates/home.html
@@ -57,6 +57,21 @@
             </p>
             <p><a class="btn btn-primary" href="/programs/autoplotter" role="button">Learn More &raquo;</a></p>
         </div>
+        <div class="col-lg-4">
+            <h3>AutoDQM</h3>
+            <p>
+            AutoDQM is a statistical tool for LHC Data Quality Management.
+            </p>
+            <p><a class="btn btn-primary" href="/programs/autodqm" role="button">Learn More &raquo;</a></p>
+        </div>
+        <div class="col-lg-4">
+            <h3>Orca Logo</h3>
+            <p>
+            In the summer of 2017, I had the priveledge to design a
+            new logo for Orca Communications.
+            </p>
+            <p><a class="btn btn-primary" href="http://www.orcacommunications.com/" role="button">Website &raquo;</a></p>
+        </div>
     </div>
 </div> <!-- End featured content -->
 
