--- a/templates/programs.html
+++ b/templates/programs.html
@@ -61,7 +61,18 @@
             <p><a class="btn btn-primary" href="/programs/autoplotter" role="button">Learn More &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-            
+            <div class="text-center">
+                <h2>AutoDQM</h2>
+                <p class="text-muted">Python/Javascript/PHP<br /></p>
+                <img class="imgframe" src="static/img/dqm_thumbnail.png" height="225" width="300">
+            </div>
+            <p><br /></p>
+            <p>
+                AutoDQM is a statistical tool for DQM shifters. It takes the
+                guesswork out of CERN Data Quality Management and comes packaged
+                with a simple, but effective GUI.
+            </p>
+            <p><a class="btn btn-primary" href="/programs/autodqm" role="button">Learn More &raquo;</a></p>
         </div>
     </div>
 </div>
