--- a/templates/about.html
+++ b/templates/about.html
@@ -45,7 +45,7 @@
 </div>
 <div class="container">
     <p>
-        I was born on June 19th, 1997 in  San Diego, California and am currently studying Physics at the University of California, Santa Barbara.
+        I was born on June 19th, 1997 in  San Diego, California and am currently studying Physics at the University of California Santa Barbara.
         While working for the Campagnari High Energy Physics group at UCSB, I have gained a greater interest in and appreciation for coding. I am most
         comfortable in Python, but I have a working knowledge of C++ and am familiar with several other programming languages including JavaScript, html,
         and bash. My work for the Campagnari group is mainly computational. We use ROOT, a C++ framework designed by and for physicists to parse and
