--- a/templates/autodqm.html
+++ b/templates/autodqm.html
@@ -41,13 +41,16 @@
             in data collection. My tool runs long established statistical tests on these graphs and outputs outliers on
             a simple, but effective, GUI that expedites the shifters' task.
         </p>
-        <p><a class="btn btn-primary btn-lg" href="http://uaf-8.t2.ucsd.edu/~jguiang/AutoDQM" role="button">Launch &raquo;</a></p>
+        <p>
+            <a class="btn btn-success btn-lg" href="http://uaf-8.t2.ucsd.edu/~jguiang/AutoDQM" role="button">Launch &raquo;</a>
+            <a class="btn btn-primary btn-lg" href="https://github.com/jkguiang/AutoDQM" role="button">Github &raquo;</a>
+        </p>
     </div>
 </div> <!-- End jumbotron -->
 
 <!-- Featured content -->
 <div class="container">
-    <h2>Source Code</h2>
+    <h2>Highlights</h2>
     <hr>
     <div class="row">
         <div class="col-lg-4">
