--- a/templates/autoplotter.html
+++ b/templates/autoplotter.html
@@ -41,13 +41,16 @@
             by UCSD. All of the plot-related code is written in C++, with some Python and JavaScript responsible for
             the functionality of the web interface.
         </p>
-        <p><a class="btn btn-primary btn-lg" href="http://uaf-8.t2.ucsd.edu/~jguiang/AutoPlotter" role="button">Launch &raquo;</a></p>
+        <p>
+            <a class="btn btn-success btn-lg" href="http://uaf-8.t2.ucsd.edu/~jguiang/AutoPlotter" role="button">Launch &raquo;</a>
+            <a class="btn btn-primary btn-lg" href="https://github.com/jkguiang/AutoPlotter" role="button">Github &raquo;</a>
+        </p>
     </div>
 </div> <!-- End jumbotron -->
 
 <!-- Featured content -->
 <div class="container">
-    <h2>Source Code</h2>
+    <h2>Highlights</h2>
     <hr>
     <div class="row">
         <div class="col-lg-4">
