--- a/templates/projectmetis.html
+++ b/templates/projectmetis.html
@@ -41,13 +41,16 @@
             implementing a module that took metadata concerning this process and produced plots that allow the user to
             better understand how the program is performing.
         </p>
-        <p><a class="btn btn-primary btn-lg" href="/programs/projectmetis/features" role="button">Features &raquo;</a></p>
+        <p>
+            <a class="btn btn-success btn-lg" href="/programs/projectmetis/features" role="button">Features &raquo;</a>
+            <a class="btn btn-primary btn-lg" href="https://github.com/jkguiang/ProjectMetis/tree/master/webinterface" role="button">Github &raquo;</a>
+        </p>
     </div>
 </div> <!-- End jumbotron -->
 
 <!-- Featured content -->
 <div class="container">
-    <h2>Source Code</h2>
+    <h2>Highlights</h2>
     <hr>
     <div class="row">
         <div class="col-lg-4">
